  -------------- REMINDER PLEASE KEEP ON TOP UNTIL RELEASE----------------
  ! Remember to enable the _free()-function in plugindescr.c (freeAll()) !
  ! as soon as the next release of GnuCash is out (2.0.0)                !
  ------------------------------------------------------------------------

2007-01-29   Christian Stimming <stimming@tuhh.de>

	* m4/binreloc.m4: Fix detection of binreloc support for
	autoconf>=2.60.

===========================================================================
MARK: released gwenhywfar-2.5.2 (2007/01/19)
===========================================================================

2007-01-17   Christian Stimming <stimming@tuhh.de>

	* configure.ac: Simplify OS section about windows; detection of
	WIN_PATH_SYSTEM et al is no longer necessary for libtool-aided
	builds, so we skip this here.
	
	* m4/ssl.m4: Change openssl detection on win32 so that gnuwin's
	libtool libraries are looked for; alternatively, the user could
	set ssl_lib and ssl_libraries externally.

===========================================================================
MARK: released gwenhywfar-2.5.1 (2007/01/16)
===========================================================================

2007-01-12  Christian Stimming  <stimming@tuhh.de>

	* configure.ac: On win32, change gwenhywfar_libs flags back to
	"-lgwenhywfar" without so-version because libtool will lookup the
	library name without so-version number.

2007-01-09   Christian Stimming <stimming@tuhh.de>

	* src/*: Add missing __stdcall decoration on callback functions as
	needed on win32 since r1087 (2006-09-14). In other words,
	gwenhywfar-2.4.1 and 2.5.0 are probably broken on win32.

===========================================================================
MARK: released gwenhywfar-2.5.0 (2006/12/25)
===========================================================================


2006/12/25: Martin Preuss<martin@libchipcard.de>
------------------------------------------------